js262/test/language/module-code/parse-err-decl-pos-import-for-of-lhs.js


/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

for (y of [])
  import v from './decl-pos-import-for-of-lhs.js';
